syntax = "proto3";
option go_package = "github.com/ilhamdcp/go-microservice/common/api";

package api;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order){}
}

message Product {
    int64 id = 1;
    string name = 2;
    int32 quantity = 3;
    float price = 4;
}

message Order {
    int64 id = 1;
    int64 customerId = 2;
    string status = 3;
    repeated Product products = 4;
}

message OrderProduct {
    string productId = 1;
    int32 quantity = 2;
}

message CreateOrderRequest {
    int64 customerId = 1;
    repeated OrderProduct orderProducts = 2;
}